Update Streams.